# planta-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  fly.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: farm.rs  lib.rs  profile.rs  user.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
migrations/: 20230729171629_user_table.sql  20230729171638_profile_table.sql  20230729171647_farm_table.sql  20230729193544_change_timestamp_type_to_timestampz.sql
shared/: Cargo.toml
shared/src/: models.rs
