[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", default-features = false, features = [ "runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "json" ] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }