[package]
name = "planta-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
tokio = "1.26.0"
sqlx = { version = "0.7.1", default-features = false, features = [ "runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "json" ] }
env_logger = "0.10.0"
dotenv = "0.15.0"
redis = "0.23.1"
deadpool-redis="0.12.0"
api-lib = { path = "../lib" }
